scheduler/admission-webhook/manifests/mutating-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: saiep-pod-mutator
webhooks:
  - name: mutate.saiep.estin.dz
    clientConfig:
      service:
        name: saiep-webhook-svc
        namespace: default
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURoekNDQW0rZ0F3SUJBZ0lVY3UzVUZaVUdDcitmT3BsdWFhUlk2Tk5lRlNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tERW1NQ1FHQTFVRUF3d2RjMkZwWlhBdGQyVmlhRzl2YXkxemRtTXVaR1ZtWVhWc2RDNXpkbU13SGhjTgpNall3TmpJek1USXhOVE0yV2hjTk1qY3dOakl6TVRJeE5UTTJXakFvTVNZd0pBWURWUVFEREIxellXbGxjQzEzClpXSm9iMjlyTFhOMll5NWtaV1poZFd4MExuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBS0VZck1KSXBFMGRhVFNvZ0xsNWpKd0RzQ2k4eVI2NGZUYVhFOXA1a2tZNUlMbmlHWjJINk1McgpCUFJZSXRqd21 [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail # Strict enforcement: If webhook is down, pod is denied.
